<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Health Gateway</string>
    <string name="app_name_development">DEV - Health Gateway</string>
    <string name="app_name_mock">MOCK - Health Gateway</string>
    <string name="app_name_stage">STG - Health Gateway</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">Not available</string>
    <string name="email_copied_to_clipboard">Email address copied to clipboard</string>
    <string name="expand_content">Expand content</string>
    <string name="collapse_content">Collapse content</string>
    <string name="feature_category_health_record">Health record</string>
    <string name="feature_category_service">Service</string>
    <string name="feature_category_dependents_records">Dependents’ records</string>
    <string name="feature_quick_action_dependents">%s’s record</string>
    <string name="feature_my_notes">My Notes</string>
    <string name="feature_immunization">Immunization</string>
    <string name="feature_medications">Medications</string>
    <string name="feature_lab_results">Lab Results</string>
    <string name="feature_special_authority">Special authority</string>
    <string name="feature_health_visit">Health visit</string>
    <string name="feature_clinic_documents">Clinic documents</string>
    <string name="feature_organ_donor">Organ donor</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="allow">Allow camera access</string>
    <string name="permission_required">Permission required</string>
    <string name="allow_vaxwallet">Allow Health Gateway to use your camera to scan QR codes to store your card.</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="camera_permission_required_title">Camera permission required!</string>
    <string name="camera_permission_message">Camera permission is required to scan BC Vaccine Card QR codes.</string>
    <string name="grant">Grant</string>
    <string name="not_now">Not now</string>
    <string name="in_app_update_body">This version of Health Gateway mobile is expired. To continue using the application, please go the Play Store to download the latest version.</string>
    <string name="in_app_update_button">Update now</string>
    <string name="in_app_update_footer">Please contact Health Gateway team (healthgateway@gov.bc.ca) for more information</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_home_title">Recommended immunizations</string>
    <string name="recommendations_description">For more information on vaccines recommendation and eligibility, please visit immunizeBC or speak to your health care provider.</string>
    <string name="recommendations_description_clickable">immunizeBC</string>
    <string name="recommendations_para1">Recommended immunization are suggestion for your health journey. This page will contains all of future immunization for you and your dependents. To add dependents to application, click on Dependent in the menu bar at the bottom.</string>
    <string name="recommendations_para2">Vaccine recommendations for you and your dependents are based on the BC Immunization Schedule. For more information on immunizations, visit  ImmunizeBC  or speak to your health care provider.</string>
    <string name="immunizeBC">ImmunizeBC</string>
    <string name="dependent">Dependent</string>
    <string name="dependent_remove">Remove dependent</string>
    <string name="dependents_title">Dependents</string>
    <string name="dependents_session_expired">Log in again to access all dependents’ records.</string>
    <string name="dependents_body">You can add your dependents under the age of 12 to view their health records. Make sure you include all given names exactly as shown on their BC Services Card.</string>
    <string name="dependents_log_in">Log in with your BC Services Card to access all dependents’ records. The BC Services Card app is a secure way to prove who you are.</string>
    <string name="dependents_add_dependent">Add dependent</string>
    <string name="dependents_aged_out_message">You no longer have access to this dependent as they have turned 12</string>
    <string name="dependents_manage_dependent">Manage dependents</string>
    <string name="dependents_registration_title">Dependent Registration</string>
    <string name="dependents_registration_first_name">Given Names</string>
    <string name="dependents_registration_first_name_hint">Enter given name</string>
    <string name="dependents_registration_first_name_error">Given Names is required</string>
    <string name="dependents_registration_given_last_name">Last Name</string>
    <string name="dependents_registration_given_last_name_hint">Enter last name</string>
    <string name="dependents_registration_given_last_name_error">Last Name is required</string>
    <string name="dependents_registration_date_of_birth">Date of birth (DoB)</string>
    <string name="dependents_registration_phn">Personal Health Number (PHN)</string>
    <string name="dependents_registration_phn_hint" tools:ignore="Typos">xxxx xxx xxx</string>
    <string name="dependents_registration_phn_footer">PHN is located on the back of the BC Services Card</string>
    <string name="dependents_registration_terms">By providing the child’s name, date of birth, and personal health number, I declare that I am the child’s guardian and that I have the authority to request and receive health information respecting the child from third parties.\n\n
        If I either: (a) cease to be guardian of this child; (b) or lose the right to request or receive health information from third parties respecting this child, I will remove them as a dependent under my Health Gateway account immediately.\n\n
        I understand that I will no longer be able to access my child’s health records once they are 12 years of age.</string>
    <string name="dependents_registration_error_duplicate">This dependent is already added</string>
    <string name="dependents_registration_error_mismatch_title">Error</string>
    <string name="dependents_registration_error_mismatch_body">The information you entered does not match our records. Please try again.\n\nIf you continue to have issues, please contact HealthGateway@gov.bc.ca</string>
    <string name="dependents_registration_error_mismatch_send">Send Email</string>
    <string name="dependents_management_title">Manage dependents</string>
    <string name="dependents_management_remove_title">Remove dependent</string>
    <string name="dependents_management_remove_body">Are you sure you want to remove this dependent(%s) from your application?</string>
    <string name="dependents_profile">Profile</string>
    <string name="dependents_profile_first">First name</string>
    <string name="dependents_profile_last">Last name</string>
    <string name="dependents_profile_phn">Personal Health Number (PHN)</string>
    <string name="dependents_profile_dob">Date of birth (DoB)</string>
    <string name="dependents_profile_remove_dependent">Remove dependent</string>
    <string name="access_count">How many others have access</string>
    <string name="access_info">This shows you how many people other than you have added your dependent to their Health Gateway account. For privacy, we can’t tell you their names. If this number isn’t what you expect, contact us at healthgateway@gov.bc.ca</string>
    <string name="resources">Resources</string>
    <string name="resource_screen_message">Connect with HealthLink BC for health advice and get the latest information about COVID-19.</string>
    <string name="label_resource_update_your_immnz">Update or add your immunizations</string>
    <string name="label_resource_advice">Get health advice</string>
    <string name="label_resource_how_to_get_vax">Get vaccinated for COVID-19</string>
    <string name="label_resource_get_tested">Get a COVID-19 test</string>
    <string name="label_resource_symptom">COVID-19 self-assessment</string>
    <string name="health_resources">Health resources</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_remove">Remove notification</string>
    <string name="notifications_clear">Clear all notifications</string>
    <string name="notifications_clear_confirmation_body">Are you sure you want to delete all notifications? You won\'t be able to access them again after this.</string>
    <string name="notifications_more_info">More information</string>
    <string name="notifications_view_details">View details</string>
    <string name="notifications_enable_body">Enabling notification to stay inform on updates in Login, Health records, Lab test results and feedbacks. </string>
    <string name="notifications_enable_button">Enable notification</string>
    <string name="notifications_error_body">Sorry, an error occurred while fetching notifications. Please try again.</string>
    <string name="notifications_empty_body">There is no notification at this moment.</string>
    <string name="notifications_session_expired">Log in again to access all notifications.</string>
    <string name="settings">Settings</string>
    <string name="settings_feedback">Feedback</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="no_app_found">No app found to open link!</string>
    <string name="turn_on_analytics">Turn on analytics</string>
    <string name="anonymized_behavioural_data_is_used_to_help_improve_the_user_experience">Share data about how you use the app. This will help us know how we can make it better. All data is anonymous.</string>
    <string name="delete_all_records_and_saved_data">Delete all records and saved data</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_data_message">Are you sure you want to delete all records and saved data?</string>
    <string name="profile_settings">Profile &amp; settings</string>
    <string name="security_and_data"><![CDATA[Security & data]]></string>
    <string name="view_profile">View profile</string>
    <string name="data">Data</string>
    <string name="delete_all_records_desc">Log out of the app and delete all records and saved information.</string>
    <string name="logins">Logins</string>
    <string name="log_in_with_bc_services_card_desc">When logged in, recrods will be automatically added and updated</string>
    <string name="logout_dialog_title">Log out of Health Gateway</string>
    <string name="logout_dialog_message">You won\'t be able to access your health records until you log in again.</string>
    <string name="log_out">Log out</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="news_feed">News feed</string>
    <string name="passes">Proofs</string>
    <string name="records">Records</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="log_in_with_bc_services_card">Log in with BC Services Card</string>
    <string name="immunization">Immunization</string>
    <string name="medications">Medications</string>
    <string name="covid_19">COVID-19</string>
    <string name="show_results">Show results</string>
    <string name="clear">Clear</string>
    <string name="lab_results">Lab Results</string>
    <string name="covid_19_tests">COVID-19 Tests</string>
    <string name="immunizations">Immunizations</string>
    <string name="health_visits">Health Visits</string>
    <string name="special_authorities">Special Authorities</string>
    <string name="hospital_visits">Hospital Visits</string>
    <string name="clinical_documents">Clinical Docs</string>
    <string name="filter">Filter</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="session_time_out">Your session has timed out</string>
</resources>