<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/health_pass"
        android:enabled="true"
        android:icon="@drawable/pass_selector"
        android:title="@string/passes" />
    <item
        android:id="@+id/health_records"
        android:enabled="true"
        android:icon="@drawable/records_selector"
        android:title="@string/records" />
    <item
        android:id="@+id/resources"
        android:enabled="true"
        android:icon="@drawable/resource_selector"
        android:title="@string/resources" />
    <item
        android:id="@+id/news_feed"
        android:enabled="true"
        android:icon="@drawable/news_feed_selector"
        android:title="@string/news_feed" />
</menu>