<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_filter"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_overflow_menu"
        android:orderInCategory="101"
        android:title="Overflow"
        app:showAsAction="always">
        <menu>


            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"
                app:showAsAction="always|withText" />
        </menu>
    </item>


</menu>