<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/img_clear"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_clear"
        android:layout_marginStart="@dimen/space_4_x"
        android:visibility="visible"
        android:filterTouchesWhenObscured="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_scrollview"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_scrollview"
        android:contentDescription="@string/clear" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:filterTouchesWhenObscured="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_clear">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:filterTouchesWhenObscured="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_date"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_medication"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medications" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_lab_results"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lab_results" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_covid_test"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_19_tests" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_immunizations"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immunizations" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_health_visit"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_visits" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_special_authority"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_authorities" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hospital_visits"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital_visits" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_clinical_document"
                style="@style/ChipFilterByType"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinical_documents" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>