<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.healthrecord.individual.TypeFilterFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check_box_immunisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/immunization"
        style="@style/BC_VAX.CheckBox"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/space_4_x"
        android:layout_marginTop="@dimen/space_2_x" />

    <CheckBox
        android:id="@+id/check_box_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medications"
        style="@style/BC_VAX.CheckBox"
        app:layout_constraintTop_toBottomOf="@+id/check_box_immunisation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/space_4_x"
        android:layout_marginTop="@dimen/space_2_x" />

    <CheckBox
        android:id="@+id/check_box_covid_test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_19"
        style="@style/BC_VAX.CheckBox"
        app:layout_constraintTop_toBottomOf="@+id/check_box_medication"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/space_4_x"
        android:layout_marginTop="@dimen/space_2_x" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_results"
        style="@style/BC_VAX.Widget.MaterialComponents.Button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4_x"
        android:layout_marginEnd="@dimen/space_4_x"
        android:layout_marginBottom="@dimen/space_3_x"
        android:text="@string/show_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>