<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_shape_round"
    android:filterTouchesWhenObscured="true"
    android:padding="@dimen/space_2_x">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_records_count"
        style="?textAppearanceHeadline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_time_out"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_msg"
        style="?textAppearanceCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1_x"
        android:text="@string/dependents_session_expired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_records_count" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/HealthGateway.Widget.MaterialComponents.Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1_x"
        android:filterTouchesWhenObscured="true"
        android:text="@string/log_in_with_bc_services_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>