<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    tools:context=".ui.dependents.DependentsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:filterTouchesWhenObscured="true"
        android:paddingBottom="@dimen/space_4_x"
        tools:context=".ui.dependents.DependentsFragment">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_top_appbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_given_name"
            style="@style/RegistrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dependents_registration_given_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_given_name"
            style="@style/RegistrationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dependents_registration_given_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_given_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_given_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_last_name"
            style="@style/RegistrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dependents_registration_given_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_given_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            style="@style/RegistrationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dependents_registration_given_last_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dob"
            style="@style/RegistrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dependents_registration_date_of_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_last_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dob"
            style="@style/RegistrationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            app:endIconDrawable="@drawable/ic_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dob">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phn"
            style="@style/RegistrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dependents_registration_phn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_dob" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phn"
            style="@style/RegistrationTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dependents_registration_phn_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phn"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phn_footer"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_x"
            android:layout_marginTop="@dimen/space_0_5_x"
            android:layout_marginEnd="@dimen/space_4_x"
            android:text="@string/dependents_registration_phn_footer"
            android:textColor="@color/medium_grey"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_phn" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_remember"
            style="?textAppearanceHeadline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_x"
            android:layout_marginTop="@dimen/space_3_x"
            android:layout_marginEnd="@dimen/space_4_x"
            android:gravity="top"
            android:paddingStart="@dimen/space_2_x"
            android:paddingTop="@dimen/space_0_5_x"
            android:text="@string/dependents_registration_terms"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phn_footer"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/HealthGateway.Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_x"
            android:layout_marginTop="@dimen/space_4_x"
            android:layout_marginEnd="@dimen/space_1_x"
            android:filterTouchesWhenObscured="true"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_remember" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/HealthGateway.Widget.MaterialComponents.Button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1_x"
            android:layout_marginEnd="@dimen/space_4_x"
            android:filterTouchesWhenObscured="true"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>